2015-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (scanner_thread): Use getpeername() to get socket's
	client address.
	(main_loop): Don't set family and client_address in globals.

2015-03-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Improve code style and remove useless
	extra allocation.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (init_host_kb, attack_host, attack_start)
	(attack_network), src/comm.c (comm_wait_order), src/nasl_plugins.c
	(nasl_thread), src/ntp.c (ntp_parse_input, ntp_recv_file),
	src/openvassd.c (handle_client, scanner_thread) , src/pluginload.c
	(plugin_get_socket): Use arg_get_value_int().

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present): New function.
	(comm_terminate): Wait for client to acknowledge termination.

	* src/openvassd.c (handle_client): Remove ntp_keep_communication_alive
	preference handling loop.

	* src/utils.c, src/utils.h (is_client_present): Remove function.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (comm_send_status): Take socket instead of globals as
	argument.
	(init_host_kb): Don't set unused CURRENTLY_TESTED_HOST globals value.
	(attack_host): Adjust function call.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (error_message_to_client, report_kb_failure)
	(apply_source_iface_preference, check_kb_access): Take socket as
	argument, instead of globals arglist.
	(init_host_kb, attack_network): Adjust functions calls.
	(attack_start): Don't set unused confirm value.

	* src/ntp.c (ntp_long_attack): Take socket as argument.
	(ntp_parse_input): Adjust function call.

	* src/otp.h: Remove unused function header.

	* src/pluginlaunch.c (running): Remove unused globals element.
	(plugin_launch): Don't set globals element.

	* src/utils.c (auth_send): Remove unused confirm parameter.