@@ -330,10 +330,9 @@ void
 plugin_set_socket (struct arglist *plugin, int soc)
 {
   if (arg_get_value (plugin, "SOCKET") != NULL)
-    arg_set_value (plugin, "SOCKET", sizeof (gpointer), GSIZE_TO_POINTER (soc));
+    arg_set_value (plugin, "SOCKET", GSIZE_TO_POINTER (soc));
   else
-    arg_add_value (plugin, "SOCKET", ARG_INT, sizeof (gpointer),
-                   GSIZE_TO_POINTER (soc));
+    arg_add_value (plugin, "SOCKET", ARG_INT, GSIZE_TO_POINTER (soc));
 }
 
 int
